# 01-rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml
fixtures/: blake3.txt  ed25519.pk  ed25519.sk  readme.md  sign_text.txt  test.csv  test.json  test.txt  tmp.b64
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64_opts.rs  csv_opts.rs  genpass_opts.rs  http.rs  jwt_ops.rs  mod.rs  test.rest  text.rs
src/process/: csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  process_base64.rs  process_jwt.rs  text.rs
