[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["Zack Chen <chenjia0101@foxmai.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
base64 = "0.22.0"
blake3 = "1.5.1"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "rt", "net", "fs", "macros"] }
toml = "0.8.12"
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "2.2.2"
tower = "0.4"
jsonwebtoken = "9.3.0"
chacha20poly1305 = "0.10.1"

# [features]
# clap = ["dep:clap"]
